<resources>
    <string name="app_name">CryptoReview</string>
    <string name="symbols_template">%s  /  %s</string>
    <string name="last_update_template">Обновлено: %s</string>
    <string name="slash">/</string>
    <string name="price_label">Цена:</string>
    <string name="min_price_label">Минимум за день:</string>
    <string name="max_price_label">Максимум за день:</string>
    <string name="last_trade_label">Последняя сделка:</string>
    <string name="last_update_label">Обновлено:</string>
    <string name="crypto_currency_logo">Crypto currency logo</string>
</resources>