<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.CoinDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivLogoCoin"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/crypto_currency_logo" />

        <TextView
            android:id="@+id/tvSlash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="@string/slash"
            android:textColor="@color/black"
            android:textSize="@dimen/price_text_size"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogoCoin" />

        <TextView
            android:id="@+id/tvFromSymbols"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/crypto_currency_name"
            android:textSize="@dimen/price_text_size"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvSlash"
            app:layout_constraintEnd_toStartOf="@+id/tvSlash"
            tools:text="BTC" />

        <TextView
            android:id="@+id/tvToSymbols"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/currency_name"
            android:textSize="@dimen/price_text_size"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvSlash"
            app:layout_constraintStart_toEndOf="@+id/tvSlash"
            tools:text="USB" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSlash">

            <TextView
                android:id="@+id/tvPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/price_label"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="2401.2" />

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="8dp"
                android:background="#ccc"
                app:layout_constraintTop_toBottomOf="@id/tvPriceLabel" />

            <TextView
                android:id="@+id/tvMinPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/min_price_label"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line1" />

            <TextView
                android:id="@+id/tvMinPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="#E53935"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/line1"
                tools:text="2301.2" />

            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="8dp"
                android:background="#ccc"
                app:layout_constraintTop_toBottomOf="@id/tvMinPriceLabel" />

            <TextView
                android:id="@+id/tvMaxPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/max_price_label"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line2" />

            <TextView
                android:id="@+id/tvMaxPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="#7CB342"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/line2"
                tools:text="2401.2" />

            <View
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="8dp"
                android:background="#ccc"
                app:layout_constraintTop_toBottomOf="@id/tvMaxPriceLabel" />

            <TextView
                android:id="@+id/tvLastTradeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/last_trade_label"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line3" />

            <TextView
                android:id="@+id/tvLastTrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/line3"
                tools:text="Bitfinex" />

            <View
                android:id="@+id/line4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="8dp"
                android:background="#ccc"
                app:layout_constraintTop_toBottomOf="@id/tvLastTradeLabel" />

            <TextView
                android:id="@+id/tvLastUpdateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/last_update_label"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line4" />

            <TextView
                android:id="@+id/tvLastUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/line4"
                tools:text="11:44:14" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>